# DynamicCrosshairFramework

./: .gitignore  .gitmodules  CMakeLists.txt  Notes-about-Dev.txt  README.md  vcpkg.json
include/: CrosshairMonitor.h  CrosshairUI.h  Menu.h  PCH.h
src/: CrosshairMonitor.cpp  CrosshairMonitor.h  CrosshairUI.cpp  Menu.cpp  PCH.h  Version.h  main.cpp
